# spillover_effects

./: .gitignore  pyproject.toml
spillover_effects/: datasets.py  regression_estimator.py  simulation.py
spillover_effects/datapipes/: data_preprocessing.py  experiment_design.py  make_dilated_out.py  make_graph.py  run_musical.sh
spillover_effects/datapipes/tests/: test_experiment_design.py  test_make_dilated_out.py  test_make_graph.py
spillover_effects/models/: __init__.py  gps_base.py  gps_core.py  gps_regression.py  gps_spline.py  ht_estimator.py  regression_estimator.py
spillover_effects/models/tests/: test_gps_base.py  test_ht_estimator.py
spillover_effects/tests/: test_datasets.py
spillover_effects/utils/: dataloader.py  dataset.py  gps_learners.py  polynomials.py
spillover_effects/utils/tests/: _utils_dataloader_manual.py  conftest.py  test_dataloader.py  test_dataset.py  test_gps_learner.py  test_polynomials.py
tests/: test_make_adj_matrix.py  test_make_dilated_out.py  test_make_gps.py  test_make_tr_vec_perm.py
