[tool.poetry]
name = "spillover-effects"
version = "0.1.0"
description = ""
authors = ["Shaoyu Liu <sl4640@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12"
igraph = "^0.11.4"
debugpy = "^1.8.1"
numpy = "^1.26.4"
black = "^24.2.0"
pytest = "^8.0.1"
networkx = "^3.2.1"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "1.11.1"
tqdm = "^4.66.2"
joblib = "^1.3.2"
scikit-learn = "^1.4.1.post1"
pycausalgps = "^0.0.3"
doubleml = "^0.7.1"
pygam = "^0.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
